# api-voicemaster-micro-fastapi

./: .endpoints.json  .gitignore  README.md  config.json  logsetup.json  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
microvoicemaster/: __init__.py  app.py  main.py
microvoicemaster/app/: app.py
microvoicemaster/logsetup/: __init__.py
microvoicemaster/transport/: __init__.py  background.py  caller.py  endpoints.py  schemas.py
tests/: strategies.py  test_routes.py
