[tool.poetry]
name = "microvoicemaster"
version = "0.1.1"
description = "A microservice to transform chord progressions into pseudomidi voices."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"
voicemaster = {path = "../voicemaster/dist/voicemaster-0.2.3-py3-none-any.whl"}
chrdiotypes = {path = "../chrdiotypes/dist/chrdiotypes-0.1.1-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
