[tool.poetry]
name = "microvoicemaster"
version = "0.1.1"
description = "A microservice to transform chord progressions into pseudomidi voices."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"
voicemaster = {path = "../voicemaster/dist/voicemaster-0.2.3-py3-none-any.whl"}
chrdiotypes = {path = "../chrdiotypes/dist/chrdiotypes-0.1.3-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pytest-cov = "^3.0.0"
hypothesis = "^6.54.4"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
