[tool.poetry]
name = "microvoicemaster"
version = "0.1.1"
description = "A microservice to transform chord progressions into pseudomidi voices."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"
voicemaster = {git = "git@github.com:chrdio/voicemaster.git", rev = "main"}
chrdiotypes = {git = "git@github.com:chrdio/chrdiotypes.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pytest-cov = "^3.0.0"
hypothesis = "^6.54.4"
requests = "^2.28.1"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=microvoicemaster --cov-branch --no-cov-on-fail --cov-report=term-missing:skip-covered --hypothesis-explain --color=yes"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
